escape-api/assets/stylesheets/map.css
:root {
    --space-wall: black;
    --space-safe: white;
    --space-pod: forestgreen;
    --space-pod-used: brown;
    --space-dangerous: gray;
    --space-humanstart: var(--human-color);
    --space-alienstart: var(--alien-color);
    --space-selected: lime;
    --space-player: gold;
    --space-playerhuman: rgb(22, 116, 238);
    --space-playeralien: red;
    --space-playerboth: mediumpurple;
    --space-hover: yellow;
    --space-noiseevent: rgb(255, 237, 134);
    --space-cardevent: orange;
}

.hexfield {
    fill: transparent;
    stroke: black;
    stroke-width: 1;
}

.hexfield:focus {
    outline: none;
}

.hexfield.wall {
    fill: var(--space-wall);
}

.hexfield.safe {
    fill: var(--space-safe);
}

.hexfield.dangerous {
    fill: var(--space-dangerous);
}

.hexfield.potential-move {
    stroke: gold;
    stroke-width: 2px;
}

.hexfield.pod {
    fill: var(--space-pod);
}

.hexfield.pod-used {
    fill: var(--space-pod-used);
}

.hexfield.alienstart {
    fill: var(--space-alienstart);
}

.hexfield.humanstart {
    fill: var(--space-humanstart);
}

.hexfield.selected {
    fill: var(--space-selected);
}

.hexfield.player {
    fill: var(--space-player);
}

.hexfield.player-human {
    fill: var(--space-playerhuman)
}

.hexfield.player-alien {
    fill: var(--space-playeralien);
}

.hexfield.player-both {
    fill: var(--space-playerboth);
}

.hexfield.noiseevent{
    fill: var(--space-noiseevent);
}

.hexfield.cardevent{
    fill: var(--space-cardevent);
}

.hexfield.attackevent{
    fill: var(--space-playeralien);
}

.hexfield:hover {
    fill: var(--space-hover);
}


#spaceHoverTooltip {
    display: none;
    position: absolute;
    background-color: black;
    padding: 5px;
    border: 1px solid var(--tooltip-color);
    color: var(--tooltip-color)
}

